Added leaders page

--- a/leaders.html
+++ b/leaders.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>Leaders</title>
 </head>
 <body>
-    <h1>Home Page</h1>
-    <a href="leaders.html"></a>
+    President <br>
+    Vice President <br>
 </body>
 </html>
