Updated hone page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Home Page</h1>
-    <a href="leaders.html"></a>
+    <a href="leaders.html">Leaders</a>
+    <a href="">Other page</a>
 </body>
 </html>
