--- a/leaders.html
+++ b/leaders.html
@@ -6,6 +6,7 @@
     <title>Leaders</title>
 </head>
 <body>
+    <a href="index.html">Home</a>
     President <br>
     Vice President <br>
 </body>
