--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Home Page</h1>
     <a href="leaders.html">Leaders</a>
-    <a href="">Other page</a>
+    <a href="">Other page...</a>
 </body>
 </html>
