--- a/leaders.html
+++ b/leaders.html
@@ -6,7 +6,8 @@
     <title>Leaders</title>
 </head>
 <body>
-    <a href="index.html">Home</a>
+    <h1>Leaders</h1><br>
+    <a href="index.html">Home</a><br>
     President <br>
     Vice President <br>
 </body>
