--- a/leaders.html
+++ b/leaders.html
@@ -9,6 +9,6 @@
     <h1>Leaders</h1><br>
     <a href="index.html">Home</a><br>
     President <br>
-    Vice President <br>
+    Vice President Josh <br>
 </body>
 </html>
