Different format for homepage

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
     <nav>
         <a id="home" href="index.html" >Home</a>
-        <a id="about" href="about.html" >About</a>
-        <a id="leaders" href="leaders.html" >Contact</a>
+        <a id="about" href="" >About</a>
+        <a id="leaders" href="leaders.html" >Leaders</a>
     </nav>
 
     <hr>
@@ -57,7 +57,7 @@
     
     <footer> 
         
-        <img id="csumbLogo" src="img/logo.png" alt="CSUMB logo">
+        <img id="csumbLogo" src="" alt="CSUMB logo">
 
         <div>
             <p class="info">
